# mineru-docparse-mcp

./: .gitignore  .mcp.json  README.md  README_CN.md  pyproject.toml
.github/workflows/: publish.yml
src/mineru_mcp_server/: __init__.py  client.py  models.py  server.py
