[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mineru-docparse-mcp"
version = "0.1.0"
description = "MCP Server for MinerU DocParse API — 将 Word/PDF/PPT/Excel 转为 Markdown"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "zhengjie9510" },
]
keywords = ["mcp", "mineru", "pdf", "markdown", "docparse"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/yourname/mineru-docparse-mcp"
Repository = "https://github.com/yourname/mineru-docparse-mcp"
Issues = "https://github.com/yourname/mineru-docparse-mcp/issues"

[project.scripts]
mineru-docparse-mcp = "mineru_mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mineru_mcp_server"]
